# libosmio-icd

./: .gitmodules  CMakeLists.txt
platform/: CMakeLists.txt
platform/arduino-avr/: CMakeLists.txt
platform/arduino-avr/src/: icd.cpp
platform/arduino-avr/src/utility/: structures.h
platform/arduino-avr/src/utility/i2c/: i2c.cpp  i2c.h
platform/linux/: CMakeLists.txt
platform/unix/: CMakeLists.txt  config.json.in
platform/unix/src/: icd.cpp
